fixed spacing issue in languages list

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -396,11 +396,11 @@ a {
 }
 
 .spells-select {
-  width: 140px;
+  width: 180px;
 }
 
 .language-select-container > button {
-  width: 140px;
+  width: 180px;
 }
 
 .language-container--text {
